--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,7 +46,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sans_bold"
                         android:gravity="center_vertical"
-                        android:text="Hi Andy!"
+                        android:text="Hi Nandy!"
                         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                         android:textColor="@color/black"
                         android:textSize="15sp" />
