--- a/app/src/main/res/layout/single_all_catagory.xml
+++ b/app/src/main/res/layout/single_all_catagory.xml
@@ -20,7 +20,7 @@
         >
 
         <LinearLayout
-            android:layout_width="@dimen/_70sdp"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/_80sdp"
             android:background="@drawable/catagory_bg"
             android:orientation="vertical"
@@ -30,7 +30,7 @@
                 android:id="@+id/image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/_12sdp"
+                android:padding="@dimen/_15sdp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/dairy_milk" />
 
