--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,11 @@
     <color name="text_title_color">#737373</color>
     <color name="green">#296E02</color>
     <color name="search_color">#F0F3F8</color>
+    <color name="colorLightGray">#D8D8D8</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorBlack">#292828</color>
+    <color name="colorText">#5A5656</color>
+    <color name="colorGreen">#097A0D</color>
+    <color name="colorRed">#FF0000</color>
+    <color name="colorGray">#969797</color>
 </resources>
