--- a/app/src/main/res/layout/custom_wish_list.xml
+++ b/app/src/main/res/layout/custom_wish_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -51,6 +51,7 @@
             android:layout_marginTop="@dimen/_10sdp">
 
             <TextView
+                android:id="@+id/item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Banana"
@@ -61,6 +62,7 @@
 
 
             <TextView
+                android:id="@+id/item_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1kg"
@@ -78,6 +80,7 @@
 
 
                 <TextView
+                    android:id="@+id/item_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="₹50"
@@ -89,6 +92,7 @@
 
 
                 <TextView
+                    android:id="@+id/item_OG_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="₹62"
@@ -102,6 +106,7 @@
 
 
                 <TextView
+                    android:id="@+id/item_discount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="20%"
