--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,11 @@
             android:id="@+id/framLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#fff"></FrameLayout>
+            android:background="#fff">
+
+
+
+        </FrameLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/view_cart"
