--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,12 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.HomeFragment"
     android:layout_marginBottom="@dimen/_10sdp"
-    android:background="@color/white">
+    android:background="@color/white"
+    tools:context=".Fragment.HomeFragment">
 
-    <androidx.core.widget.NestedScrollView
+<!--    <com.google.android.material.appbar.AppBarLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:fitsSystemWindows="true"-->
+<!--        android:backgroundTint="@color/actionbar">-->
+
+<!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:fitsSystemWindows="true"-->
+<!--            app:contentScrim="@color/white"-->
+<!--            app:layout_scrollFlags="snap|scroll|exitUntilCollapsed"-->
+<!--            app:expandedTitleTextAppearance="@style/Widget.Design.CollapsingToolbar"-->
+<!--            app:collapsedTitleTextAppearance="@style/Widget.Design.CollapsingToolbar">-->
+
+
+
+
+<!--            <androidx.appcompat.widget.Toolbar-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="?attr/actionBarSize"-->
+<!--                android:backgroundTint="@color/white"-->
+<!--                app:layout_collapseMode="pin">-->
+
+<!--                <androidx.cardview.widget.CardView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_margin="@dimen/_5sdp"-->
+<!--                    app:cardCornerRadius="@dimen/_5sdp"-->
+<!--                    android:layout_height="wrap_content">-->
+
+<!--                <TextView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:layout_margin="@dimen/_5sdp"-->
+<!--                    android:backgroundTint="@color/white"-->
+<!--                    android:gravity="center_vertical"-->
+<!--                    android:text="Search"-->
+<!--                    android:padding="@dimen/_5sdp"/>-->
+
+<!--                </androidx.cardview.widget.CardView>-->
+<!--            </androidx.appcompat.widget.Toolbar>-->
+
+
+<!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->
+
+<!--    </com.google.android.material.appbar.AppBarLayout>-->
+
+    <com.amar.library.ui.StickyScrollView
         android:id="@+id/nested_scroll"
+        app:stickyHeader="@id/search_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,81 +68,83 @@
             android:layout_marginVertical="@dimen/_10sdp"
             android:orientation="vertical">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_20sdp"
-                android:orientation="horizontal">
+                android:layout_marginTop="@dimen/_10sdp">
 
-                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/profile_image"
-                    android:layout_width="@dimen/_40sdp"
-                    android:layout_height="@dimen/_40sdp"
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/img"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/_10sdp"
                     android:src="@drawable/img_man" />
 
                 <LinearLayout
+                    android:id="@+id/name_line"
+                    android:layout_marginLeft="@dimen/_10sdp"
+                    android:layout_toRightOf="@+id/img"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/_8sdp"
-                    android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="Hi Andy!"
+                        android:layout_marginTop="@dimen/_5sdp"
                         android:fontFamily="@font/sans_bold"
-                        android:gravity="center_vertical"
-                        android:text="Hi Nandy!"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                         android:textColor="@color/black"
-                        android:textSize="15sp" />
+                        android:textSize="@dimen/_14ssp"/>
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:fontFamily="@font/sans_regular"
-                        android:gravity="center_vertical"
-                        android:lineSpacingExtra="0sp"
+                        android:layout_marginTop="@dimen/_5sdp"
                         android:text="How are you feeling today?"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                        android:textColor="@color/black"
-                        android:textSize="12sp" />
-
+                        android:fontFamily="@font/sans_medium"
+                        android:textSize="@dimen/_12ssp"/>
 
                 </LinearLayout>
 
-
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="@dimen/_5sdp"
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="@dimen/_20sdp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginRight="@dimen/_15sdp"
                     android:src="@drawable/notification" />
 
+                <RelativeLayout
+                    android:id="@+id/search_card"
+                    android:layout_width="wrap_content"
+                    android:layout_below="@+id/img"
+                    android:layout_height="wrap_content">
 
-            </LinearLayout>
-
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_15sdp"
-                app:cardBackgroundColor="@color/search_color"
-                app:cardCornerRadius="@dimen/_5sdp"
-                app:cardUseCompatPadding="true">
-
-                <TextView
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/sans_medium"
-                    android:padding="@dimen/_10sdp"
-                    android:text="Search" />
+                    android:layout_margin="@dimen/_5sdp"
+                    app:cardCornerRadius="@dimen/_5sdp"
+                    android:layout_height="wrap_content">
 
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="@dimen/_5sdp"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_marginEnd="@dimen/_5sdp"
+                        android:layout_marginBottom="@dimen/_5sdp"
+                        android:backgroundTint="@color/white"
+                        android:gravity="center_vertical"
+                        android:hint="Search..."
+                        android:padding="@dimen/_5sdp"
+                        android:textColorHint="@color/black" />
 
-            </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>
+
+                </RelativeLayout>
+
+            </RelativeLayout>
 
 
             <androidx.cardview.widget.CardView
@@ -373,5 +423,6 @@
 
 
         </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+    </com.amar.library.ui.StickyScrollView>
+
 </RelativeLayout>
