--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,19 +21,18 @@
             android:background="#fff">
 
 
-
         </FrameLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/view_cart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="@dimen/_5sdp"
-            android:layout_marginVertical="@dimen/_10sdp"
-            android:layout_marginHorizontal="@dimen/_10sdp"
-            app:cardBackgroundColor="#03801E"
             android:layout_alignParentBottom="true"
-            >
+            android:layout_marginHorizontal="@dimen/_10sdp"
+            android:layout_marginVertical="@dimen/_10sdp"
+            app:cardBackgroundColor="#03801E"
+            app:cardCornerRadius="@dimen/_5sdp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -43,27 +41,27 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
                     android:layout_marginHorizontal="@dimen/_10sdp"
                     android:layout_marginVertical="@dimen/_10sdp"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/sans_regular"
                         android:text="5 items"
                         android:textColor="@color/white"
-                        android:textSize="12sp"
-                        android:fontFamily="@font/sans_regular"/>
+                        android:textSize="12sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_2sdp"
+                        android:fontFamily="@font/sans_regular"
                         android:text="₹840"
                         android:textColor="@color/white"
-                        android:textSize="14sp"
-                        android:fontFamily="@font/sans_regular"
-                        android:layout_marginTop="@dimen/_2sdp"/>
+                        android:textSize="14sp" />
 
 
                 </LinearLayout>
@@ -72,12 +70,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginRight="@dimen/_10sdp"
+                    android:fontFamily="@font/sans_regular"
                     android:text="View Cart"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/sans_regular"
-                    android:layout_gravity="center"
-                    android:layout_marginRight="@dimen/_10sdp"/>
+                    android:textSize="16sp" />
 
 
             </LinearLayout>
@@ -92,6 +90,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_gravity="bottom"
         app:itemBackground="@color/white"
         app:itemHorizontalTranslationEnabled="true"
         app:itemIconTint="@drawable/tab_selected_color"
@@ -99,6 +98,4 @@
         app:itemTextColor="@drawable/tab_selected_color"
         app:labelVisibilityMode="auto"
         app:menu="@menu/bottom_nav_menu" />
-
-
 </RelativeLayout>
