--- a/app/src/main/res/layout/activity_my_address.xml
+++ b/app/src/main/res/layout/activity_my_address.xml
@@ -82,7 +82,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/sans_regular"
-                        android:text="Add New Address"
+                        android:text="Edit Address"
                         android:textColor="#EFA230"
                         android:textSize="@dimen/_12ssp" />
 
