--- a/app/src/main/res/layout/custom_cart_item.xml
+++ b/app/src/main/res/layout/custom_cart_item.xml
@@ -166,15 +166,35 @@
                 xmlns:numberpicker="http://schemas.android.com/apk/res-auto"
                 tools:context="com.travijuu.numberpicker.sample.MainActivity">
 
+<!--                <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton-->
+<!--                    -->
+<!--                    android:layout_width="@dimen/_80sdp"-->
+<!--                    android:layout_height="@dimen/_25sdp"-->
+<!--                    app:backGroundColor="@color/colorPrimary"-->
+<!--                    app:textSize="8sp"-->
+<!--                    android:layout_marginTop="18dp"-->
+<!--                    android:layout_centerHorizontal="true" />-->
+
+<!--                <com.huynn109.IncreaseDecreaseButton-->
+<!--                    android:id="@+id/number_button"-->
+<!--                    app:activeIconColor="@color/increase_decrease_lib_active"-->
+<!--                    app:minNumber="1"-->
+<!--                    app:maxNumber="10"-->
+<!--                    app:initNumber="2"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"/>-->
+
                 <com.travijuu.numberpicker.library.NumberPicker
-                    android:id="@+id/number_picker"
+                    android:id="@+id/number_button"
                     android:layout_width="130dp"
                     android:layout_height="40dp"
-                    numberpicker:min="0"
-                    numberpicker:max="999999999"
+                    numberpicker:min="1"
+                    numberpicker:max="20"
                     numberpicker:value="-5"
                     numberpicker:unit="1"
-                    numberpicker:focusable="false"/>
+                    numberpicker:focusable="false"
+                    numberpicker:custom_layout="@layout/number_picker_custom_layout" />
+
 
             </LinearLayout>
 
