--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,56 +8,112 @@
     android:background="@color/white"
     tools:context=".Fragment.HomeFragment">
 
-<!--    <com.google.android.material.appbar.AppBarLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:fitsSystemWindows="true"-->
-<!--        android:backgroundTint="@color/actionbar">-->
+<!--     <com.google.android.material.appbar.AppBarLayout-->
+<!--         android:layout_width="match_parent"-->
+<!--         android:layout_height="@dimen/_120sdp"-->
+<!--         android:fitsSystemWindows="true">-->
 
-<!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:fitsSystemWindows="true"-->
-<!--            app:contentScrim="@color/white"-->
-<!--            app:layout_scrollFlags="snap|scroll|exitUntilCollapsed"-->
-<!--            app:expandedTitleTextAppearance="@style/Widget.Design.CollapsingToolbar"-->
-<!--            app:collapsedTitleTextAppearance="@style/Widget.Design.CollapsingToolbar">-->
+<!--         <com.google.android.material.appbar.CollapsingToolbarLayout-->
+<!--             android:layout_width="match_parent"-->
+<!--             android:layout_height="match_parent"-->
+<!--             android:fitsSystemWindows="true"-->
+<!--             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">-->
 
+<!--             <RelativeLayout-->
+<!--                 android:layout_width="match_parent"-->
+<!--                 android:layout_height="wrap_content"-->
+<!--                 android:layout_marginTop="@dimen/_10sdp">-->
 
+<!--                 <de.hdodenhof.circleimageview.CircleImageView-->
+<!--                     android:id="@+id/img"-->
+<!--                     android:layout_width="wrap_content"-->
+<!--                     android:layout_height="wrap_content"-->
+<!--                     android:layout_marginLeft="@dimen/_10sdp"-->
+<!--                     android:src="@drawable/img_man"-->
+<!--                     app:layout_collapseMode="parallax"/>-->
 
+<!--                 <LinearLayout-->
+<!--                     android:id="@+id/name_line"-->
+<!--                     android:layout_marginLeft="@dimen/_10sdp"-->
+<!--                     android:layout_toRightOf="@+id/img"-->
+<!--                     android:layout_width="wrap_content"-->
+<!--                     android:layout_height="wrap_content"-->
+<!--                     app:layout_collapseMode="parallax"-->
+<!--                     android:orientation="vertical">-->
 
-<!--            <androidx.appcompat.widget.Toolbar-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="?attr/actionBarSize"-->
-<!--                android:backgroundTint="@color/white"-->
-<!--                app:layout_collapseMode="pin">-->
+<!--                     <TextView-->
+<!--                         android:layout_width="wrap_content"-->
+<!--                         android:layout_height="wrap_content"-->
+<!--                         android:text="Hi Andy!"-->
+<!--                         android:layout_marginTop="@dimen/_5sdp"-->
+<!--                         android:fontFamily="@font/sans_bold"-->
+<!--                         android:textColor="@color/black"-->
+<!--                         android:textSize="@dimen/_14ssp"/>-->
 
-<!--                <androidx.cardview.widget.CardView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_margin="@dimen/_5sdp"-->
-<!--                    app:cardCornerRadius="@dimen/_5sdp"-->
-<!--                    android:layout_height="wrap_content">-->
+<!--                     <TextView-->
+<!--                         android:layout_width="wrap_content"-->
+<!--                         android:layout_height="wrap_content"-->
+<!--                         android:layout_marginTop="@dimen/_5sdp"-->
+<!--                         android:text="How are you feeling today?"-->
+<!--                         android:fontFamily="@font/sans_medium"-->
+<!--                         android:textSize="@dimen/_12ssp"/>-->
 
-<!--                <TextView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_margin="@dimen/_5sdp"-->
-<!--                    android:backgroundTint="@color/white"-->
-<!--                    android:gravity="center_vertical"-->
-<!--                    android:text="Search"-->
-<!--                    android:padding="@dimen/_5sdp"/>-->
+<!--                 </LinearLayout>-->
 
-<!--                </androidx.cardview.widget.CardView>-->
-<!--            </androidx.appcompat.widget.Toolbar>-->
+<!--                 <ImageView-->
+<!--                     android:layout_width="@dimen/_20sdp"-->
+<!--                     android:layout_height="@dimen/_20sdp"-->
+<!--                     android:layout_alignParentRight="true"-->
+<!--                     android:layout_marginTop="@dimen/_10sdp"-->
+<!--                     android:layout_marginRight="@dimen/_15sdp"-->
+<!--                     app:layout_collapseMode="parallax"-->
+<!--                     android:src="@drawable/notification" />-->
 
+<!--                 <Toolbar-->
+<!--                     android:layout_width="match_parent"-->
+<!--                     android:layout_height="?attr/actionBarSize"-->
+<!--                     app:layout_collapseMode="pin"/>-->
 
-<!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->
+<!--                 <RelativeLayout-->
+<!--                     android:id="@+id/search_card"-->
+<!--                     android:layout_width="wrap_content"-->
+<!--                     android:layout_height="wrap_content"-->
+<!--                     android:layout_below="@+id/img">-->
 
-<!--    </com.google.android.material.appbar.AppBarLayout>-->
+<!--                     <androidx.cardview.widget.CardView-->
+<!--                         android:layout_width="match_parent"-->
+<!--                         android:layout_height="wrap_content"-->
+<!--                         android:layout_marginStart="@dimen/_5sdp"-->
+<!--                         android:layout_marginTop="@dimen/_5sdp"-->
+<!--                         android:layout_marginEnd="@dimen/_5sdp"-->
+<!--                         android:layout_marginBottom="@dimen/_5sdp"-->
+<!--                         app:cardCornerRadius="@dimen/_5sdp">-->
 
-    <com.amar.library.ui.StickyScrollView
+<!--                         <TextView-->
+<!--                             android:layout_width="match_parent"-->
+<!--                             android:layout_height="match_parent"-->
+<!--                             android:layout_marginStart="@dimen/_5sdp"-->
+<!--                             android:layout_marginTop="@dimen/_5sdp"-->
+<!--                             android:layout_marginEnd="@dimen/_5sdp"-->
+<!--                             android:layout_marginBottom="@dimen/_5sdp"-->
+<!--                             android:backgroundTint="@color/white"-->
+<!--                             android:gravity="center_vertical"-->
+<!--                             android:hint="Search..."-->
+<!--                             android:padding="@dimen/_5sdp"-->
+<!--                             android:textColorHint="@color/black" />-->
+
+<!--                     </androidx.cardview.widget.CardView>-->
+
+<!--                 </RelativeLayout>-->
+
+<!--             </RelativeLayout>-->
+
+<!--         </com.google.android.material.appbar.CollapsingToolbarLayout>-->
+
+<!--     </com.google.android.material.appbar.AppBarLayout>-->
+
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/nested_scroll"
-        app:stickyHeader="@id/search_card"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -118,34 +174,36 @@
                 <RelativeLayout
                     android:id="@+id/search_card"
                     android:layout_width="wrap_content"
-                    android:layout_below="@+id/img"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/img">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_margin="@dimen/_5sdp"
-                    app:cardCornerRadius="@dimen/_5sdp"
-                    android:layout_height="wrap_content">
-
-                    <TextView
+                    <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:layout_marginEnd="@dimen/_5sdp"
                         android:layout_marginBottom="@dimen/_5sdp"
-                        android:backgroundTint="@color/white"
-                        android:gravity="center_vertical"
-                        android:hint="Search..."
-                        android:padding="@dimen/_5sdp"
-                        android:textColorHint="@color/black" />
+                        app:cardCornerRadius="@dimen/_5sdp">
 
-                </androidx.cardview.widget.CardView>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="@dimen/_5sdp"
+                            android:layout_marginTop="@dimen/_5sdp"
+                            android:layout_marginEnd="@dimen/_5sdp"
+                            android:layout_marginBottom="@dimen/_5sdp"
+                            android:backgroundTint="@color/white"
+                            android:gravity="center_vertical"
+                            android:hint="Search..."
+                            android:padding="@dimen/_5sdp"
+                            android:textColorHint="@color/black" />
+
+                    </androidx.cardview.widget.CardView>
 
                 </RelativeLayout>
 
             </RelativeLayout>
-
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -204,6 +262,7 @@
 
 
                 <TextView
+                    android:id="@+id/HomeCatViewAll"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
@@ -247,6 +306,7 @@
 
 
                 <TextView
+                    android:id="@+id/HomeTeaViewAll"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
@@ -290,6 +350,7 @@
 
 
                 <TextView
+                    android:id="@+id/HomeFruitViewAll"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
@@ -353,6 +414,7 @@
 
 
                 <TextView
+                    android:id="@+id/HomeOilViewAll"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
@@ -423,6 +485,6 @@
 
 
         </LinearLayout>
-    </com.amar.library.ui.StickyScrollView>
+    </androidx.core.widget.NestedScrollView>
 
-</RelativeLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
