--- a/app/src/main/res/layout/single_all_catagory.xml
+++ b/app/src/main/res/layout/single_all_catagory.xml
@@ -7,6 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
+        android:id="@+id/AllCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
