--- a/app/src/main/res/layout/custom_cart_item.xml
+++ b/app/src/main/res/layout/custom_cart_item.xml
@@ -38,7 +38,7 @@
                     android:id="@+id/image"
                     android:layout_width="@dimen/_70sdp"
                     android:layout_height="@dimen/_70sdp"
-                    android:src="@drawable/img_man_shirt"
+                    android:src="@drawable/banana"
                     android:layout_gravity="center"
                     android:padding="@dimen/_5sdp"
                     />
@@ -77,7 +77,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Redmi 9A"
+                android:text="Banana"
                 android:textSize="@dimen/_12ssp"
                 android:textColor="@color/colorBlack"
                 android:layout_marginTop="@dimen/_5sdp"
@@ -87,7 +87,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="By MI"
+                android:text="1kg"
                 android:textSize="@dimen/_10ssp"
                 android:textColor="@color/colorText"
                 android:layout_marginTop="@dimen/_5sdp"
@@ -104,7 +104,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="₹15000"
+                    android:text="₹45"
                     android:textSize="@dimen/_12ssp"
                     android:textColor="@color/colorBlack"
                     android:layout_marginTop="@dimen/_5sdp"
@@ -115,7 +115,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="₹18000"
+                    android:text="₹50"
                     android:textSize="@dimen/_10ssp"
                     android:textColor="@color/colorText"
                     android:layout_marginTop="@dimen/_5sdp"
@@ -128,7 +128,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="20%"
+                    android:text="10%"
                     android:textSize="@dimen/_12ssp"
                     android:textColor="@color/colorRed"
                     android:layout_marginTop="@dimen/_5sdp"
