--- a/app/src/main/res/layout/single_populer_item.xml
+++ b/app/src/main/res/layout/single_populer_item.xml
@@ -12,95 +12,143 @@
         app:cardCornerRadius="@dimen/_5sdp"
         app:cardUseCompatPadding="true">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/discount_bg"
-        android:layout_marginTop="@dimen/_10sdp"
-        >
-
-        <TextView
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/sans_regular"
-            android:padding="@dimen/_3sdp"
-            android:text="21% OFF"
-            android:textColor="@color/white"
-            android:textSize="10sp" />
+            android:layout_marginTop="@dimen/_10sdp"
+            android:background="@drawable/discount_bg">
 
-    </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/sans_regular"
+                android:padding="@dimen/_3sdp"
+                android:text="21% OFF"
+                android:textColor="@color/white"
+                android:textSize="10sp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginHorizontal="@dimen/_10sdp">
-
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_120sdp"
-            android:layout_marginLeft="@dimen/_15sdp"
-            android:src="@drawable/tata_tea" />
-
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:fontFamily="@font/sans_medium"
-            android:text="Roadstar"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginHorizontal="@dimen/_10sdp"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_120sdp"
+                android:layout_marginLeft="@dimen/_15sdp"
+                android:src="@drawable/tata_tea" />
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:fontFamily="@font/sans_medium"
+                android:text="Roadstar"
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_weight="1">
+                android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_8sdp"
-                    android:fontFamily="@font/sans_regular"
-                    android:text="₹350"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:textColor="@color/black"
-                    android:textSize="15sp" />
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_3sdp"
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_8sdp"
+                        android:fontFamily="@font/sans_regular"
+                        android:text="₹350"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                        android:textColor="@color/black"
+                        android:textSize="15sp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_3sdp"
+                        android:fontFamily="@font/sans_regular"
+                        android:text="₹120"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                        android:textColor="@color/text_title_color"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/addBtn"
+                    android:layout_width="@dimen/_60sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/btn_add_bg"
                     android:fontFamily="@font/sans_regular"
-                    android:text="₹120"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                    android:textColor="@color/text_title_color"
-                    android:textSize="12sp" />
+                    android:text="Add"
+                    android:elevation="@dimen/_10sdp"
+                    android:textColor="@color/purple_500" />
+
+                <LinearLayout
+
+                    android:backgroundTint="@color/purple_500"
+                    android:layout_gravity="center"
+                    android:id="@+id/IncDec"
+                    android:layout_width="@dimen/_60sdp"
+                    android:layout_height="@dimen/_25sdp"
+                    android:background="@drawable/round_add_new_address"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/decreaseButton"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:text="-"
+                        android:backgroundTint="@color/purple_500"
+                        android:gravity="center"
+                        android:textSize="@dimen/_14ssp"
+                        android:textColor="@color/white"
+                        android:layout_weight="1"/>
+
+
+                    <TextView
+                        android:id="@+id/IncDecText"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:text="0"
+                        android:gravity="center"
+                        android:textSize="@dimen/_10ssp"
+                        android:textColor="@color/white"
+                        android:layout_weight="1"/>
+
+
+                    <TextView
+                        android:id="@+id/increaseButton"
+                        android:backgroundTint="@color/purple_500"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:text="+"
+                        android:layout_gravity="right"
+                        android:gravity="center"
+                        android:textSize="@dimen/_14ssp"
+                        android:textColor="@color/white"/>
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="@dimen/_60sdp"
-                android:layout_height="@dimen/_25sdp"
-                android:text="Add"
-                android:fontFamily="@font/sans_regular"
-                android:background="@drawable/btn_add_bg"
-                android:layout_gravity="center"
-                android:textColor="@color/green"/>
 
         </LinearLayout>
-
-
-
-    </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
