--- a/app/src/main/res/layout/single_recomended_item.xml
+++ b/app/src/main/res/layout/single_recomended_item.xml
@@ -87,13 +87,61 @@
             </LinearLayout>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/addBtn"
                 android:layout_width="@dimen/_60sdp"
                 android:layout_height="@dimen/_25sdp"
                 android:text="Add"
                 android:fontFamily="@font/sans_regular"
                 android:background="@drawable/btn_add_bg"
                 android:layout_gravity="center"
-                android:textColor="@color/green"/>
+                android:textColor="@color/purple_500"/>
+
+            <LinearLayout
+
+                android:backgroundTint="@color/purple_500"
+                android:layout_gravity="center"
+                android:id="@+id/IncDec"
+                android:layout_width="@dimen/_60sdp"
+                android:layout_height="@dimen/_25sdp"
+                android:background="@drawable/round_add_new_address"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/decreaseButton"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:text="-"
+                    android:backgroundTint="@color/purple_500"
+                    android:gravity="center"
+                    android:textSize="@dimen/_14ssp"
+                    android:textColor="@color/white"
+                    android:layout_weight="1"/>
+
+
+                <TextView
+                    android:id="@+id/IncDecText"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:text="0"
+                    android:gravity="center"
+                    android:textSize="@dimen/_10ssp"
+                    android:textColor="@color/white"
+                    android:layout_weight="1"/>
+
+
+                <TextView
+                    android:id="@+id/increaseButton"
+                    android:backgroundTint="@color/purple_500"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:text="+"
+                    android:layout_gravity="right"
+                    android:gravity="center"
+                    android:textSize="@dimen/_14ssp"
+                    android:textColor="@color/white"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
