--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.EditProfile">
+    tools:context=".Activity.EditProfile"
+    android:id="@+id/rel">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -60,6 +61,7 @@
                 app:cardCornerRadius="@dimen/_270sdp">
 
                 <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/circularImg"
                     android:layout_width="@dimen/_100sdp"
                     android:layout_height="@dimen/_100sdp"
                     android:padding="@dimen/_10sdp"
@@ -68,6 +70,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/CameraBTN"
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_below="@+id/pfp"
@@ -79,7 +82,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="@dimen/_8sdp"
-                    android:src="@drawable/camera"/>
+                    android:src="@drawable/color_camera"/>
 
             </androidx.cardview.widget.CardView>
 
@@ -92,6 +95,7 @@
                 android:layout_marginRight="@dimen/_12sdp">
 
                 <EditText
+                    android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:drawableStart="@drawable/img_profile"
@@ -109,6 +113,7 @@
                 android:layout_marginRight="@dimen/_12sdp">
 
                 <EditText
+                    android:id="@+id/phone"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:drawableStart="@drawable/phone"
@@ -127,6 +132,7 @@
                 android:layout_marginRight="@dimen/_12sdp">
 
                 <EditText
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:drawableStart="@drawable/mail"
@@ -137,6 +143,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
+                android:id="@+id/updateProfileBTN"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/_10sdp"
